# bazel-nix-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-nix-example  bazel-bin  bazel-out  bazel-testlogs  python38_base_image.nix
